# Othello-Exam

./: .gitignore  CMakeLists.txt  Othellog.txt  README.md  board.c  board.h  checks.c  checks.h  exam_v2.c  gameLog.c  gameLog.h  gui.c  gui.h  input.c  input.h  makefile  othello  readme.txt  utilities.c  utilities.h
